--- a/ML_exam.ipynb
+++ b/ML_exam.ipynb
@@ -2252,31 +2252,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 30,
       "metadata": {
         "id": "sNMKEou2YnzN"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/opt/homebrew/lib/python3.9/site-packages/keras/src/layers/convolutional/base_conv.py:99: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
-            "  super().__init__(\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# build the layers of CNN model\n",
         "from tensorflow.keras import layers,models\n",
         "\n",
         "cnn_model = models.Sequential([\n",
-        "    layers.Conv2D(filters=30, kernel_size=(3, 3), activation='relu', input_shape=(150, 150, 3), padding = 'same'),\n",
-        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Conv2D(filters=30, kernel_size=(3), activation='relu', input_shape=(150, 150, 3), padding = 'same'),\n",
+        "    layers.MaxPooling2D((2)),\n",
         "\n",
         "\n",
-        "    layers.Conv2D(filters=64, kernel_size=(3, 3), activation='relu', padding = 'same'),\n",
-        "    layers.MaxPooling2D((2, 2)),\n",
+        "    layers.Conv2D(filters=64, kernel_size=(3), activation='relu', padding = 'same'),\n",
+        "    layers.MaxPooling2D((2)),\n",
         "\n",
         "    layers.Flatten(),\n",
         "    layers.Dense(64, activation='relu'),\n",
